@@ -1,24 +1,32 @@
 package com.example.nhom3.project.modules.identity.service.Impl;
 
 
-import com.example.nhom3.project.common.exception.AppException;
-import com.example.nhom3.project.common.exception.ErrorCode;
-import com.example.nhom3.project.common.utils.SecurityUtils;
-import com.example.nhom3.project.modules.identity.dto.request.AdminCreateUserRequest;
-import com.example.nhom3.project.modules.identity.dto.request.AdminUserUpdateRequest;
-import com.example.nhom3.project.modules.identity.dto.request.PasswordUpdateRequest;
+
+import com.example.nhom3.project.modules.identity.dto.event.NotificationEvent;
+import com.example.nhom3.project.modules.identity.dto.request.*;
 import com.example.nhom3.project.modules.identity.dto.response.AdminUserResponse;
+import com.example.nhom3.project.modules.identity.dto.response.PageResponse;
 import com.example.nhom3.project.modules.identity.dto.response.UserResponse;
 import com.example.nhom3.project.modules.identity.entity.Role;
 import com.example.nhom3.project.modules.identity.entity.User;
+import com.example.nhom3.project.modules.identity.enums.UserStatus;
+import com.example.nhom3.project.modules.identity.enums.VerificationType;
+import com.example.nhom3.project.common.exception.AppException;
+import com.example.nhom3.project.common.exception.ErrorCode;
 import com.example.nhom3.project.modules.identity.mapper.UserMapper;
 import com.example.nhom3.project.modules.identity.repository.RoleRepository;
 import com.example.nhom3.project.modules.identity.repository.UserRepository;
 import com.example.nhom3.project.modules.identity.service.UserService;
+import com.example.nhom3.project.common.utils.SecurityUtils;
 import lombok.AccessLevel;
 import lombok.RequiredArgsConstructor;
 import lombok.experimental.FieldDefaults;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.domain.Sort;
 import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.stereotype.Service;
@@ -29,7 +37,6 @@ import org.springframework.util.StringUtils;
 import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 
 @Service
@@ -41,14 +48,18 @@ public class UserServiceImpl implements UserService {
     RoleRepository roleRepository;
     UserMapper userMapper;
     PasswordEncoder passwordEncoder;
+    ApplicationEventPublisher eventPublisher;
+
 
     @Override
-    public UserResponse createUser(AdminCreateUserRequest request) {
+    @Transactional
+    @PreAuthorize("hasRole('ADMIN')")
+    public AdminUserResponse createUser(AdminCreateUserRequest request) {
         if (userRepository.existsByEmail(request.getEmail()))
-            throw new RuntimeException("EMAIL_ALREADY_EXISTS");
+            throw new AppException(ErrorCode.EMAIL_EXISTED);
 
         if (userRepository.existsByPhone(request.getPhone()))
-            throw new RuntimeException("PHONE_ALREADY_EXISTS");
+            throw new AppException(ErrorCode.PHONE_EXISTED);
 
         User user = userMapper.toUser(request);
 
@@ -57,7 +68,7 @@ public class UserServiceImpl implements UserService {
         }
 
         user.setPasswordHash(passwordEncoder.encode(request.getPassword()));
-        user.setStatus("ACTIVE");
+        user.setStatus(UserStatus.ACTIVE);
         user.setFailedAttemptCount(0);
 
         if (!CollectionUtils.isEmpty(request.getRoles())) {
@@ -65,50 +76,59 @@ public class UserServiceImpl implements UserService {
                 String formattedRoleName = roleName.startsWith("ROLE_") ? roleName : "ROLE_" + roleName;
 
                 Role role = roleRepository.findByName(formattedRoleName)
-                        .orElseThrow(() -> new RuntimeException("ROLE_NOT_FOUND: " + formattedRoleName));
+                        .orElseThrow(() -> new AppException(ErrorCode.ROLE_NOT_EXISTED) {
+                            @Override
+                            public String getMessage() {
+                                return "Không tìm thấy quyền: " + formattedRoleName;
+                            }
+                        });
                 user.addRole(role);
             });
         }
 
-        return userMapper.toUserResponse(userRepository.save(user));
+        return userMapper.toAdminUserResponse(userRepository.save(user));
     }
 
     @Override
     @PreAuthorize("hasRole('ADMIN')")
-    public List<UserResponse> getAllUsers() {
-        return userRepository.findAll().stream()
-                .map(userMapper::toUserResponse)
-                .collect(Collectors.toList());
+    public PageResponse<AdminUserResponse> getAllUsers(int page, int size) {
+        Sort sort = Sort.by("createdAt").descending(); // Sắp xếp mới nhất lên đầu
+        Pageable pageable = PageRequest.of(page - 1, size, sort);
+
+        // 2. Thực hiện truy vấn phân trang tại tầng Database
+        Page<User> userPage = userRepository.findAll(pageable);
+
+        // 3. Map danh sách Entity sang DTO
+        List<AdminUserResponse> dtoList = userPage.getContent().stream()
+                .map(userMapper::toAdminUserResponse)
+                .toList();
+
+        // 4. Trả về object PageResponse theo đúng cấu trúc bạn đã định nghĩa
+        return PageResponse.<AdminUserResponse>builder()
+                .currentPage(page)
+                .pageSize(size)
+                .totalPages(userPage.getTotalPages())
+                .totalElements(userPage.getTotalElements())
+                .hasNext(userPage.hasNext())
+                .hasPrevious(userPage.hasPrevious())
+                .data(dtoList)
+                .build();
     }
 
     @Override
-    public UserResponse getUser(UUID id) {
-        return userRepository.findById(id)
-                .map(userMapper::toUserResponse)
-                .orElseThrow(() -> new RuntimeException("USER_NOT_FOUND"));
-    }
+    @PreAuthorize("hasRole('ADMIN')")
+    public AdminUserResponse getAdminUserDetail(UUID id) {
 
-    @Override
-    @Transactional
-    public void updatePassword(PasswordUpdateRequest request) {
-        UUID currentId = SecurityUtils.getCurrentUserId();
-
-        User user = userRepository.findById(currentId)
+        User user = userRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
-
-        if (!passwordEncoder.matches(request.getOldPassword(), user.getPasswordHash())) {
-            throw new RuntimeException("OLD_PASSWORD_INCORRECT");
-        }
-        user.setPasswordHash(passwordEncoder.encode(request.getNewPassword()));
-        user.setUpdatedAt(Instant.now());
-
-        userRepository.save(user);
+        return userMapper.toAdminUserResponse(user);
     }
 
     @Override
     @Transactional
     @PreAuthorize("hasRole('ADMIN')")
-    public UserResponse updateUser(UUID userId, AdminUserUpdateRequest request) {
+    public AdminUserResponse updateUser(UUID userId, AdminUpdateUserRequest request) {
+
         User user = userRepository.findById(userId)
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
 
@@ -128,23 +148,226 @@ public class UserServiceImpl implements UserService {
             roles.forEach(user::addRole);
         }
 
+        return userMapper.toAdminUserResponse(userRepository.save(user));
+    }
+
+    // Điều khiển trạng thái
+    @Override
+    @Transactional
+    @PreAuthorize("hasRole('ADMIN')")
+    public void adminSoftDelete(UUID targetId) {
+        User user = userRepository.findById(targetId)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+
+        user.setDeletedAt(Instant.now());
+        user.setDeletedByAdmin(true);
+        user.setStatus(UserStatus.DELETED);
+
+        userRepository.save(user);
+    }
+
+    @Override
+    @Transactional
+    @PreAuthorize("hasRole('ADMIN')")
+    public AdminUserResponse restoreUserByAdmin(UUID targetId) {
+        User user = userRepository.findById(targetId)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+
+        user.setDeletedAt(null);
+        user.setDeletedByAdmin(false);
+
+        if (user.getLockedUntil() != null && user.getLockedUntil().isAfter(Instant.now())) {
+            user.setStatus(UserStatus.BANNED);
+        } else {
+            user.setStatus(UserStatus.ACTIVE);
+        }
+
+        return userMapper.toAdminUserResponse(userRepository.save(user));
+    }
+
+    @Override
+    @Transactional
+    @PreAuthorize("hasRole('ADMIN')")
+    public AdminUserResponse banUser(UUID targetId, Instant until, String reason) {
+        User user = userRepository.findById(targetId)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+
+        user.setLockedUntil(until);
+        user.setBanReason(reason);
+        user.setStatus(UserStatus.BANNED);
+
+        userRepository.save(user);
+
+        eventPublisher.publishEvent(NotificationEvent.builder()
+                .identifier(user.getEmail()) // Ưu tiên email
+                .type(VerificationType.ACCOUNT_LOCK)
+                .targetName(reason) // Gửi kèm lý do
+                .newValue(until.toString()) // Thời hạn
+                .build());
+
+        return userMapper.toAdminUserResponse(user);
+    }
+
+    @Override
+    @Transactional
+    @PreAuthorize("hasRole('ADMIN')")
+    public AdminUserResponse unbanUser(UUID targetId) {
+        User user = userRepository.findById(targetId)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+
+        user.setLockedUntil(null);
+        user.setBanReason(null);
+
+        if (user.getDeletedAt() == null) {
+            user.setStatus(UserStatus.ACTIVE);
+        }
+
+        userRepository.save(user);
+        eventPublisher.publishEvent(NotificationEvent.builder()
+                .identifier(user.getEmail())
+                .type(VerificationType.ACCOUNT_UNLOCK)
+                .targetName("Trạng thái tài khoản")
+                .newValue("Đã được mở khóa")
+                .build());
+
+        return userMapper.toAdminUserResponse(user);
+    }
+
+    @Override
+    @Transactional
+    @PreAuthorize("hasRole('ADMIN')")
+    public void hardDeleteUser(UUID targetId) {
+        if (!userRepository.existsById(targetId)) {
+            throw new AppException(ErrorCode.USER_NOT_EXISTED);
+        }
+        userRepository.deleteById(targetId);
+    }
+
+    // Ban/Unban: Dùng Enum UserStatus bên trong logic
+//    @Override
+//    public AdminUserResponse updateStatus(UUID targetId, UserStatus status, String reason, Instant until) {
+//
+//    }
+
+    // --- NHÓM NGƯỜI DÙNG (SELF-SERVICE) ---
+    @Override
+    public UserResponse getMyInfo() {
+        UUID currentId = SecurityUtils.getCurrentUserId();
+        return userRepository.findById(currentId)
+                .map(userMapper::toUserResponse)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+    }
+
+    @Override
+    public void changePassword(ChangePasswordRequest request) {
+        UUID currentId = SecurityUtils.getCurrentUserId();
+
+        User user = userRepository.findById(currentId)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+
+        if (!passwordEncoder.matches(request.getOldPassword(), user.getPasswordHash())) {
+            throw new AppException(ErrorCode.INVALID_PASSWORD) {
+                @Override
+                public String getMessage() {
+                    return "Mật khẩu cũ không chính xác.";
+                }
+            };
+        }
+        user.setPasswordHash(passwordEncoder.encode(request.getNewPassword()));
+        user.setUpdatedAt(Instant.now());
+        userRepository.save(user);
+        publishSecurityEvent(user, "Mật khẩu", "********");
+    }
+
+    @Override
+    public void userSelfDelete() {
+        UUID userId = SecurityUtils.getCurrentUserId();
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+
+        user.setDeletedAt(Instant.now());
+        user.setDeletedByAdmin(false);
+        user.setStatus(UserStatus.PENDING_DELETION);
+        userRepository.save(user);
+    }
+
+    @Override
+    public UserResponse restoreSelf() {
+        UUID currentUserId = SecurityUtils.getCurrentUserId();
+
+        User user = userRepository.findById(currentUserId)
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+
+        if (user.getDeletedAt() != null) {
+            long daysInTrash = java.time.Duration.between(user.getDeletedAt(), Instant.now()).toDays();
+            if (daysInTrash > 30) {
+                throw new AppException(ErrorCode.USER_DELETED_PERMANENTLY);
+            }
+        }
+
+        user.setDeletedAt(null);
+        user.setDeletedByAdmin(false);
+        user.setStatus(UserStatus.ACTIVE);
+
         return userMapper.toUserResponse(userRepository.save(user));
     }
 
     @Override
-    @PreAuthorize("hasRole('ADMIN')")
-    public void deleteUser(UUID id) {
-        if (!userRepository.existsById(id))
-            throw new AppException(ErrorCode.USER_NOT_EXISTED);
-        userRepository.deleteById(id);
-    }
+    @Transactional
+    public UserResponse updateIdentity(UUID userId, UpdateIdentifierRequest request) {
 
-    @Override
-    @PreAuthorize("hasRole('ADMIN')")
-    public AdminUserResponse getAdminUserDetail(UUID id) {
-        User user = userRepository.findById(id)
+        UUID currentUserId = SecurityUtils.getCurrentUserId();
+        if (!userId.equals(currentUserId)) {
+            throw new AppException(ErrorCode.UNAUTHORIZED);
+        }
+
+        User user = userRepository.findById(userId)
                 .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
 
-        return userMapper.toAdminUserResponse(user);
+        if (!passwordEncoder.matches(request.getCurrentPassword(), user.getPasswordHash())) {
+            throw new AppException(ErrorCode.INVALID_PASSWORD);
+        }
+
+        String oldEmail = user.getEmail();
+        String oldPhone = user.getPhone();
+        boolean isChanged = false;
+
+        if (StringUtils.hasText(request.getPhone()) && !request.getPhone().equals(oldPhone)) {
+            if (userRepository.existsByPhone(request.getPhone())) throw new AppException(ErrorCode.PHONE_EXISTED);
+            user.setPhone(request.getPhone());
+            isChanged = true;
+            publishSecurityEvent(user, "Số điện thoại", request.getPhone());
+        }
+
+        if (StringUtils.hasText(request.getEmail()) && !request.getEmail().equals(oldEmail)) {
+            if (userRepository.existsByEmail(request.getEmail())) throw new AppException(ErrorCode.EMAIL_EXISTED);
+            user.setEmail(request.getEmail());
+            isChanged = true;
+            publishSecurityEvent(user, "Email đăng nhập", request.getEmail());
+        }
+
+        if (!isChanged) {
+            return userMapper.toUserResponse(user);
+        }
+        return userMapper.toUserResponse(userRepository.save(user));
+    }
+
+    private void publishSecurityEvent(User user, String target, String newValue) {
+        eventPublisher.publishEvent(NotificationEvent.builder()
+                .identifier(user.getEmail())
+                .type(VerificationType.SECURITY_UPDATE)
+                .targetName(target)
+                .newValue(newValue)
+                .build());
+
+        // Nếu có số điện thoại, bắn thêm 1 event nữa cho số điện thoại
+        if (StringUtils.hasText(user.getPhone())) {
+            eventPublisher.publishEvent(NotificationEvent.builder()
+                    .identifier(user.getPhone())
+                    .type(VerificationType.SECURITY_UPDATE)
+                    .targetName(target)
+                    .newValue(newValue)
+                    .build());
+        }
     }
 }
